--- a/src/scenes/view/TrainerMenu.fxml
+++ b/src/scenes/view/TrainerMenu.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="trainerMenuAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/TrainerMenu.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.TrainerMenuController">
    <children>
@@ -12,7 +13,7 @@
             <Label fx:id="labelWelcomeTrainer" layoutX="363.0" layoutY="1.0" text="Welcome trainer!" />
          </children>
       </Pane>
-      <Label fx:id="labelQuestion" layoutX="27.0" layoutY="170.0" text="What would you like to do today?" />
+      <Label fx:id="labelQuestion" layoutX="24.0" layoutY="202.0" text="What would you like to do today?" />
       <Pane fx:id="pane2" layoutX="42.0" layoutY="293.0" prefHeight="430.0" prefWidth="487.0">
          <children>
             <Button fx:id="btnCollection" blendMode="OVERLAY" layoutX="48.0" layoutY="49.0" mnemonicParsing="false" onAction="#viewCollection" prefHeight="50.0" prefWidth="400.0" text="View your collection" />
@@ -21,5 +22,23 @@
             <Button fx:id="btnLogout" blendMode="OVERLAY" layoutX="44.0" layoutY="324.0" mnemonicParsing="false" onAction="#logoutButton" prefHeight="50.0" prefWidth="400.0" text="Logout" />
          </children>
       </Pane>
+      <Label layoutX="108.0" layoutY="131.0" text="Wins: ">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="373.0" layoutY="131.0" text="Losses: ">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="668.0" layoutY="131.0" text="Currency:">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblWins" layoutX="180.0" layoutY="137.0" text="10000" />
+      <Label fx:id="lblLosses" layoutX="457.0" layoutY="137.0" text="10000" />
+      <Label fx:id="lblCurrency" layoutX="770.0" layoutY="137.0" text="10000" />
    </children>
 </AnchorPane>
