--- a/src/scenes/view/TrainerCollection.fxml
+++ b/src/scenes/view/TrainerCollection.fxml
@@ -23,7 +23,7 @@
                 <Label fx:id="labelMyTeam" layoutX="57.0" layoutY="14.0" text="My team" />
                 <ListView fx:id="listTeam" layoutX="13.0" layoutY="61.0" prefHeight="307.0" prefWidth="200.0" />
                 <Button fx:id="btnSelect2" layoutX="18.0" layoutY="376.0" mnemonicParsing="false" onAction="#showSelectedTeam" text="Select" />
-            <Button fx:id="btnRemove" layoutX="113.0" layoutY="376.0" mnemonicParsing="false" text="Remove" />
+            <Button fx:id="btnRemove" layoutX="113.0" layoutY="376.0" mnemonicParsing="false" onAction="#removeTeam" text="Remove" />
             </children>
         </Pane>
         <Pane fx:id="pane3" layoutX="454.0" layoutY="18.0" prefHeight="314.0" prefWidth="255.0">
