--- a/src/scenes/view/ShowAllPokemon.fxml
+++ b/src/scenes/view/ShowAllPokemon.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -12,8 +13,8 @@
 
 <AnchorPane fx:id="showAllPokemonAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/ShowAllPokemon.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.ShowAllPokemonController">
     <children>
-        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="31.0" layoutY="54.0" mnemonicParsing="false" onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select" />
-        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="31.0" layoutY="694.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back" />
+        <Button fx:id="btnSelect" blendMode="MULTIPLY" layoutX="31.0" layoutY="694.0" mnemonicParsing="false" onAction="#showPokemon" prefHeight="60.0" prefWidth="120.0" text="Select" />
+        <Button fx:id="btnBack" blendMode="MULTIPLY" layoutX="1066.0" layoutY="724.0" mnemonicParsing="false" onAction="#backButton" prefHeight="60.0" prefWidth="120.0" text="Back" />
         <Pane fx:id="pane1" layoutX="31.0" layoutY="133.0" prefHeight="541.0" prefWidth="410.0">
             <children>
                 <ListView fx:id="listView" layoutX="25.0" layoutY="18.0" onEditStart="#showPokemon" prefHeight="505.0" prefWidth="360.0" />
@@ -86,9 +87,9 @@
             <Label fx:id="lblPrice" layoutX="227.0" layoutY="622.0" text="0" />
             </children>
         </Pane>
-        <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="258.0" layoutY="54.0" mnemonicParsing="false" onAction="#reArrangeScene" prefHeight="60.0" prefWidth="183.0" text="Catch Pokémon!" />
+        <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="258.0" layoutY="694.0" mnemonicParsing="false" onAction="#reArrangeScene" prefHeight="60.0" prefWidth="183.0" text="Catch Pokémon!" />
         <Button fx:id="btnGetNewPokemon" blendMode="MULTIPLY" layoutX="217.0" layoutY="694.0" mnemonicParsing="false" onAction="#getNewPokemon" prefHeight="60.0" text="Catch a new Pokémon!" visible="false" />
-      <Button fx:id="btnHelp" blendMode="MULTIPLY" layoutX="1133.0" layoutY="761.0" mnemonicParsing="false" onAction="#showHelp" text="Help" />
+      <Button fx:id="btnHelp" blendMode="MULTIPLY" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#showHelp" text="Help" />
       <Pane fx:id="paneHelp" layoutX="975.0" layoutY="267.0" prefHeight="494.0" prefWidth="211.0" visible="false">
          <children>
             <Label alignment="TOP_LEFT" layoutX="6.0" layoutY="7.0" prefHeight="35.0" prefWidth="200.0" text="     On the left you can find the list of all the Pokémon you can collect." wrapText="true" />
@@ -109,5 +110,8 @@
             <Font size="20.0" />
          </font>
       </Label>
+      <ChoiceBox fx:id="filterType" layoutX="269.0" layoutY="99.0" prefHeight="25.0" prefWidth="121.0" />
+      <Button layoutX="399.0" layoutY="99.0" mnemonicParsing="false" onAction="#changeFilter" text="OK" />
+      <Label layoutX="276.0" layoutY="76.0" text="Set Search Filter" />
     </children>
 </AnchorPane>
