--- a/src/scenes/view/ShowAllPokemon.fxml
+++ b/src/scenes/view/ShowAllPokemon.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -102,16 +101,15 @@
       </Pane>
       <Label fx:id="lblCurrencyTitle" layoutX="930.0" layoutY="69.0" text="Your Currency:" underline="true">
          <font>
-            <Font size="20.0" />
+            <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <Label fx:id="lblCurrency" layoutX="930.0" layoutY="118.0" text="Your Currency:">
+      <Label fx:id="lblCurrency" layoutX="946.0" layoutY="118.0" text="123456789">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="filterType" layoutX="269.0" layoutY="99.0" prefHeight="25.0" prefWidth="121.0" />
-      <Button layoutX="399.0" layoutY="99.0" mnemonicParsing="false" onAction="#changeFilter" text="OK" />
-      <Label layoutX="276.0" layoutY="76.0" text="Set Search Filter" />
+      <TextField fx:id="txtSearch" layoutX="31.0" layoutY="99.0" promptText="Search" />
+      <Button layoutX="180.0" layoutY="99.0" mnemonicParsing="false" onAction="#search" text="Search" />
     </children>
 </AnchorPane>
